# stellar-txwatch-core

./: README.md
config/: example.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/poller/src/: lib.rs
