[package]
name    = "txwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "txwatch"
path = "src/main.rs"

[dependencies]
txwatch-config   = { path = "../config" }
txwatch-poller   = { path = "../poller" }
txwatch-notifier = { path = "../notifier" }
clap             = { workspace = true }
tokio            = { workspace = true }
anyhow           = { workspace = true }
reqwest          = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
